# NeNotion

./: CMakeLists.txt  README.md  UmlDiagramm.txt  architecture.md  main.cpp
Boards/: Board.cpp  Board.h
Constants/: Constants.h
Factories/: BoardPageFactory.cpp  BoardPageFactory.h  CalendarPageFactory.cpp  CalendarPageFactory.h  ColorPageFactory.cpp  ColorPageFactory.h  Factories.cpp  Factories.h  MainPageFactory.cpp  MainPageFactory.h  MenuPageFactory.cpp  MenuPageFactory.h  PicturePageFactory.cpp  PicturePageFactory.h  PositionPageFactory.cpp  PositionPageFactory.h  TaskPageFactory.cpp  TaskPageFactory.h
Windows/: Windows.cpp  Windows.h
interfaceSFML/: interfaceSFML.cpp  interfaceSFML.h
